--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -400,7 +400,7 @@
                             android:layout_weight="1"
                             android:layout_marginLeft="15dp"
                             android:gravity="center_vertical"
-                            android:text="수수료 설정"
+                            android:text="주문갯수 설정"
                             android:textColor="#8590AC" />
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -414,7 +414,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center"
-                                android:text="4"
+                                android:text="1"
                                 android:background="#FFFFFF"
                                 />
                             <TextView
