--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -395,35 +395,88 @@
                         android:weightSum="2"
                         android:visibility="gone">
                         <TextView
+                            android:id="@+id/set_order_text"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="25dp"
                             android:layout_weight="1"
                             android:layout_marginLeft="15dp"
                             android:gravity="center_vertical"
-                            android:text="주문갯수 설정"
+                            android:text="주문설정"
                             android:textColor="#8590AC" />
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
+                            android:layout_height="25dp"
                             android:layout_weight="1"
                             android:orientation="horizontal"
                             android:weightSum="2">
                             <TextView
-                                android:id="@+id/feesTxt"
+                                android:id="@+id/input_order_amount_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:text="1"
-                                android:background="#FFFFFF"
+                                android:textColor="#FFFFFF"
+                                android:background="@drawable/button_border"
                                 />
                             <TextView
-                                android:id="@+id/pushTxt"
+                                android:id="@+id/push_order_amount_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center"
-                                android:text="설정"
+                                android:text="주문수량"
+                                android:textColor="#FFFFFF"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="25dp"
+                            android:layout_weight="1"
+                            android:orientation="horizontal"
+                            android:weightSum="2">
+                            <TextView
+                                android:id="@+id/input_abroad_fee_text"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:text="4"
+                                android:textColor="#FFFFFF"
+                                android:background="@drawable/button_border"
+                                />
+                            <TextView
+                                android:id="@+id/push_abroad_fee_text"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:text="해외수수료"
+                                android:textColor="#FFFFFF"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="25dp"
+                            android:layout_weight="1"
+                            android:orientation="horizontal"
+                            android:weightSum="2">
+                            <TextView
+                                android:id="@+id/input_domestic_fee_text"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:text="1000"
+                                android:textColor="#FFFFFF"
+                                android:background="@drawable/button_border"
+                                />
+                            <TextView
+                                android:id="@+id/push_domestic_fee_text"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:text="국내수수료"
                                 android:textColor="#FFFFFF"/>
                         </LinearLayout>
 
