--- a/app/src/main/res/layout/pr_port_chart.xml
+++ b/app/src/main/res/layout/pr_port_chart.xml
@@ -198,30 +198,36 @@
                 android:orientation="horizontal"
                 android:layout_weight="1"
                 android:weightSum="3">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text="잔고"
-                    android:textSize="10dp"
-                    android:textColor="#838FA9"/>
+                    android:textAlignment="center"
+                    android:textColor="#838FA9"
+                    android:textSize="10dp" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:text="평균단가"
-                    android:textSize="10dp"
-                    android:gravity="center_vertical"
-                    android:textColor="#838FA9"/>
+                    android:textAlignment="center"
+                    android:textColor="#838FA9"
+                    android:textSize="10dp" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:layout_weight="1"
-                    android:text="손익"
-                    android:textSize="10dp"
                     android:gravity="center_vertical"
-                    android:textColor="#838FA9"/>
+                    android:text="손익"
+                    android:textAlignment="center"
+                    android:textColor="#838FA9"
+                    android:textSize="10dp" />
             </LinearLayout>
 
             <LinearLayout
