1. 포지션 오류 수정 2. 차트 프래그먼트 레이아웃 크기 설정을 위해 이벤트 오버라이드 함수 작성 3. 데이터시리즈 클리어 오류 수정 4. 어노테이션 오류 수정 5. 프로그레스 어노테이션 생성 6. 차트 터지 이벤트 도입 7. 차트 툴바 어노테이션 도입 8. 역사적 변동성을 위해 심플 차트 도입 9. 통계 클래스 생성 10. 차트데이터 오류 수정 11. 차트데이터 데이트타임 오류 수정 12. 차트데이터 이벤트 도입

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -450,7 +450,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center"
-                                android:text="해외수수료"
+                                android:text="해외수수료(＄)"
                                 android:textColor="#FFFFFF"/>
                         </LinearLayout>
 
@@ -476,7 +476,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center"
-                                android:text="국내수수료"
+                                android:text="국내수수료(￦)"
                                 android:textColor="#FFFFFF"/>
                         </LinearLayout>
 
