--- a/app/src/main/res/layout/pr_port_chart.xml
+++ b/app/src/main/res/layout/pr_port_chart.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,126 +22,42 @@
         android:fillViewport="true">-->
 
         <!--스크롤 뷰를 위해 한번 더 감 싼다 -->
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="280dp"
-                android:layout_weight="7.8"
-                android:orientation="vertical">
-
-                <!--mockTitle -->
-                <!--<LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="42dp"
-                    android:layout_weight="0"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:weightSum="10"
-                        android:background="#2B3652"
-                        android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/mockMenuImg"
-                        android:layout_width="50dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:padding="5dp"
-                        app:srcCompat="@drawable/ic_menu_gray_24dp"/>
-                    <Button
-                        android:id="@+id/symSelectBtn"
-                        android:layout_width="120dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:layout_marginRight="2dp"
-                        android:background="#2B3652"
-                        android:text="종목선택"
-                        android:textColor="#FFFFFF"
-                        android:textSize="15dp"
-                        android:textStyle="bold" />
-
-                        <ImageView
-                            android:id="@+id/chartSelectImg"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:layout_weight="1.5"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginBottom="4dp"
-                            app:srcCompat="@drawable/ic_multiline_chart_gray_24dp" />
-
-                        <ImageView
-                            android:id="@+id/indexSelectImg"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:layout_weight="1.5"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginBottom="4dp"
-                            app:srcCompat="@drawable/ic_jipyo_gray_24dp" />
-
-                        <ImageView
-                            android:id="@+id/lineSelectImg"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:layout_weight="1.5"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginBottom="4dp"
-                            app:srcCompat="@drawable/ic_line_gray_24dp" />
-
-                        <ImageView
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:layout_weight="1.5"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginBottom="4dp"
-                            app:srcCompat="@drawable/ic_person_add_gray_24dp" />
-                    </LinearLayout>
-                </LinearLayout>-->
-
-                <FrameLayout
-                    android:id="@+id/mainChartContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                </FrameLayout>
-
-
-                    <!--<com.scichart.charting.visuals.SciChartSurface
-                    android:id="@+id/rsiChart"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    </com.scichart.charting.visuals.SciChartSurface>-->
-
-
-            </LinearLayout>
+    <LinearLayout
+        android:id="@+id/chart_order_upper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/chart_order_lower"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/Lout2"
-            android:layout_below="@+id/Lout1"
+            android:id="@+id/layout_mainchart"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_weight="7.8"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/mainChartContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></FrameLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_option"
             android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:layout_below="@+id/Lout1"
             android:layout_weight="0.2"
-            android:weightSum="10"
+            android:background="#1E1E1E"
             android:orientation="horizontal"
-            android:background="#1E1E1E">
+            android:weightSum="10">
+
             <FrameLayout
                 android:id="@+id/option_container"
                 android:layout_width="280dp"
                 android:layout_height="match_parent"
                 android:layout_weight="8"></FrameLayout>
+
             <ImageView
                 android:id="@+id/changeChartImg"
                 android:layout_width="50dp"
@@ -151,39 +67,33 @@
         </LinearLayout>
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_weight="2.5"
-                android:orientation="horizontal">
+        <LinearLayout
+            android:id="@+id/layout_subchart"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_weight="2.0"
+            android:orientation="horizontal">
 
-                <FrameLayout
-                    android:id="@+id/leftChartContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"></FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/rightChartContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"></FrameLayout>
-            </LinearLayout>
-
-            <!--여기에 공간 추가-->
-            <!--<TextView
+            <FrameLayout
+                android:id="@+id/leftChartContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n"/>-->
+                android:layout_weight="1"></FrameLayout>
 
+            <FrameLayout
+                android:id="@+id/rightChartContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"></FrameLayout>
+        </LinearLayout>
 
-    <!--</ScrollView>-->
-
-
+    </LinearLayout>
     <!--매수 매도 고정-->
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/chart_order_lower"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="105dp"
+        android:layout_alignParentBottom="true"
         android:background="#2C3852"
         android:gravity="center">
         <LinearLayout
@@ -274,142 +184,77 @@
                 android:layout_height="50dp"
                 android:orientation="horizontal"
                 android:layout_weight="1"
-                android:weightSum="2">
+                android:weightSum="10">
+
+
+                <Button
+                    android:id="@+id/sell_btn_left"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="2dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/radius_green_left"
+                    android:text="△"
+                    android:textSize="16dp"
+                    android:textColor="#FFFFFF" />
 
                 <Button
                     android:id="@+id/sellBtn"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="2.5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/radius_green"
+                    android:layout_weight="3"
+                    android:background="@drawable/radius_green_center"
                     android:text="매도"
                     android:textSize="16dp"
                     android:textColor="#FFFFFF" />
 
                 <Button
-                    android:id="@+id/buyBtn"
-                    android:layout_width="match_parent"
+                    android:id="@+id/sell_btn_right"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginRight="1dp"
                     android:layout_weight="1"
-                    android:background="@drawable/radius_red"
+                    android:background="@drawable/radius_green_right"
+                    android:text="▽"
+                    android:textSize="16dp"
+                    android:textColor="#FFFFFF" />
+
+                <Button
+                    android:id="@+id/buy_btn_left"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="1dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/radius_red_left"
+                    android:text="△"
+                    android:textSize="16dp"
+                    android:textColor="#FFFFFF" />
+
+                <Button
+                    android:id="@+id/buyBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="0dp"
+                    android:layout_weight="3"
+                    android:background="@drawable/radius_red_center"
                     android:text="매수"
+                    android:textSize="16dp"
+                    android:textColor="#FFFFFF" />
+
+                <Button
+                    android:id="@+id/buy_btn_right"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="2dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/radius_red_right"
+                    android:text="▽"
                     android:textSize="16dp"
                     android:textColor="#FFFFFF" />
 
             </LinearLayout>
 
         </LinearLayout>
-        <!--<LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:weightSum="2">
-            <LinearLayout
-                android:id="@+id/buyLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="3dp"
-                android:layout_marginTop="1dp">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:gravity="center_vertical"
-                    android:text="잔고"
-                    android:textSize="10dp"
-                    android:textColor="#838FA9"/>
-
-                <TextView
-                    android:id="@+id/open_qty"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:text="$50"
-                    android:textColor="#FFFFFF"
-                    android:gravity="center"
-                    android:background="#242B3D"/>
-
-                <Button
-                    android:id="@+id/sellBtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/radius_green"
-                    android:text="매도"
-                    android:textSize="16dp"
-                    android:textColor="#FFFFFF" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/sellLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_toRightOf="@+id/buyLayout"
-                android:orientation="vertical"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="1dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:text="수익"
-                    android:textSize="10dp"
-                    android:gravity="center_vertical"
-                    android:textColor="#838FA9"/>
-
-                <TextView
-                    android:id="@+id/position_profit"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:text="123456"
-                    android:textColor="#FFFFFF"
-                    android:gravity="center"
-                    android:background="#242B3D"/>
-
-                <Button
-                    android:id="@+id/buyBtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/radius_red"
-                    android:text="매수"
-                    android:textSize="16dp"
-                    android:textColor="#FFFFFF" />
-
-            </LinearLayout>
-        </LinearLayout>-->
-
-
-
-        <!--<Button
-            android:id="@+id/buyBtn"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/radius_red"
-            android:text="매수"
-            android:textSize="16dp"
-            android:textColor="#FFFFFF" />
-
-        <Button
-            android:id="@+id/sellBtn"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_toRightOf="@+id/buyBtn"
-            android:background="@drawable/radius_green"
-            android:text="매도"
-            android:textSize="16dp"
-            android:textColor="#FFFFFF" />-->
-        <!--<FrameLayout
-            android:id="@+id/btnContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></FrameLayout>-->
-
-    </RelativeLayout>
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
